--- a/redux-counter/src/html/index.html
+++ b/redux-counter/src/html/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="app"></div>
-    <button id="decrement_button">decrement</button>
-    <button id="increment_button">increment</button>
+    <!-- <button id="decrement_button">decrement</button>
+    <button id="increment_button">increment</button> -->
 </body>
 </html>
