--- a/vanilla-counter/function-counter/src/html/index.html
+++ b/vanilla-counter/function-counter/src/html/index.html
@@ -8,8 +8,7 @@
 </head>
 <body>
     <div id="app"></div>
-    <button id='increment'>increment</button>
-    <button id="decrement">decrement</button>
+    <!-- <button id='increment'>increment</button>
+    <button id="decrement">decrement</button> -->
 </body>
-<script src="app.js"></script>
 </html>
