--- a/tips/bind/index.html
+++ b/tips/bind/index.html
@@ -9,8 +9,10 @@
   <body>
     <h1>this,bindについて</h1>
     <div id="message"></div>
-    <button id="btn1">Click</button>
-    <button id="btn2">Click</button>
+    <button id="btn1">関数宣言</button>
+    <button id="btn2">アロー関数</button>
+    <button id="btn3">メソッドで実行(bind不要)</button>
+    <button id="btn4">関数で実行(bind必要)</button>
     <script src="main.js"></script>
   </body>
 </html>
